header font sizes fix on mobile devices

--- a/themes/tieto_admin/src/sass/paragraphs/header.scss
+++ b/themes/tieto_admin/src/sass/paragraphs/header.scss
@@ -69,12 +69,18 @@ $paragraph-header-overlay-bg: rgba(103, 175, 225, .5); // @todo move to variable
         display: inline-block;
         font-weight: 800;
         letter-spacing: -2px;
+        @media (max-width: 766px) {
+            font-size: 2.8em;
+        }
     }
 
     .field--name-field-secondary-title,
     .field--name-field-lead-text {
         font-size: 1.5em;
         margin-bottom: .5em;
+        @media (max-width: 766px) {
+            font-size: 1.2em;
+        }
     }
 
     .field--name-field-title,
